# alshraritalal-dev

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/game_engine/: BudgetAllocator.cpp  BudgetAllocator.h  DashboardController.cpp  DashboardController.h  DisplayEnumerator.cpp  DisplayEnumerator.h  ScalabilitySerializer.cpp  ScalabilitySerializer.h  UIRenderer.cpp  UIRenderer.h  main.cpp
cmake/: CompilerOptions.cmake  DependencyManifest.cmake  ProjectLayout.cmake
config/: audio_config.json  engine_defaults.ini  graphics_settings.schema.json  hardware_presets.json  keybindings.json  scalability.json
docs/: phase0_foundation.md
scripts/: setup_demo_workstation.ps1  vcpkg-pwsh-download.ps1
shaders/hlsl/: gbuffer.hlsl  lighting.hlsl  tonemapping.hlsl
src/core/containers/: ring_buffer.h  slot_map.h  sparse_set.h
src/core/memory/: arena_allocator.cpp  arena_allocator.h  pool_allocator.cpp  pool_allocator.h  tlsf_heap.cpp  tlsf_heap.h
src/core/platform/: cpu_topology.cpp  cpu_topology.h  high_res_timer.cpp  high_res_timer.h
src/core/threading/: job_system.cpp  job_system.h
src/renderer/: camera.cpp  camera.h  frame_graph.cpp  frame_graph.h  renderer_mvp.cpp  renderer_mvp.h
src/renderer/backend/: descriptor_heap.cpp  descriptor_heap.h  dx12_command_list.cpp  dx12_command_list.h  dx12_command_queue.cpp  dx12_command_queue.h  dx12_common.cpp  dx12_common.h  dx12_device.cpp  dx12_device.h  dx12_swapchain.cpp  dx12_swapchain.h  gpu_resource_manager.cpp  gpu_resource_manager.h  upload_ring_buffer.cpp  upload_ring_buffer.h
src/renderer/pipeline/: pbr_material.cpp  pbr_material.h
src/renderer/render_passes/: gbuffer_pass.cpp  gbuffer_pass.h  lighting_pass.cpp  lighting_pass.h  tonemapping_pass.cpp  tonemapping_pass.h
tests/: core_systems_tests.cpp
tools/: shader_compiler.cpp  shader_compiler.h
tools/agent_control_panel/: README.md
tools/agent_control_panel/backend/: requirements.txt
tools/agent_control_panel/backend/app/: __init__.py  artifacts.py  computer_use.py  config.py  dynamic_orchestrator.py  execution.py  helpers.py  llm.py  main.py  orchestrator.py  prompts.py  schemas.py  state.py  swarm_prompts.py  swarm_registry.py  watchdog_manager.py  workspace.py
tools/agent_control_panel/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
tools/agent_control_panel/frontend/src/: App.vue  style.css
tools/agent_control_panel/frontend/src/components/: AgentLogPanel.vue  AgentMessageCard.vue  AnalystMessageCard.vue  ArtifactGallery.vue  ChatAndTaskArea.vue  ChatBubble.vue  InputConsole.vue  JsonTreeNode.vue  MarkdownBlock.vue  PendingOpsPanel.vue  PipelineProgress.vue  SessionSidebar.vue  Sidebar.vue  SwarmInspectorPanel.vue  SwarmOverview.vue  SwarmStatusBar.vue  SwarmTaskBoard.vue  SwarmWorkerBoard.vue  TopNavbar.vue  UserMessageBubble.vue  WorkerTaskCard.vue
tools/agent_control_panel/frontend/src/lib/: i18n.js
vendor_sdks/: README.md
